fix show numbers alignment

--- a/skin/popup.css
+++ b/skin/popup.css
@@ -268,6 +268,15 @@ body.disabled #enabled #enabled-no
   line-height: 140%;
 }
 
+#stats li {
+  position: relative;
+}
+
+#show-iconnumber {
+  position: absolute;
+  left: -20px;
+}
+
 #share
 {
   margin-top: 5px;
